added comparing the answers functionality and created the display when quiz ends in js, added highscore html document

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             The timer is set to 75 sec and every wrong answer reduces 10 sec of
             your time</li>
           <li>At the end of timer your score will be displayed and can be saved
-            by adding your intials and clicking the SAVE button</li>
+            by adding your intials and clicking the SUBMIT button</li>
           </ul>
         </p>
 
