added highscores page code

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <title>Code Quiz</title>
     <meta charset="UTF-8" />
     <meta name="viewport" , content="width= device-width, initial-scale =1" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
     <!--highscores page link-->
     <a href="highscores.html">VIEW HIGHSCORES </a>
-    <!--timer -->
-    <div class="timer-clock"></div>
+  
     <!--wrapper-->
     <div id="wrapper">
+        <!--timer -->
+    <div id="timer-clock"></div>
       <!--questions and start button container-->
       <div id="quesContainer">
         <h1>Coding Quiz Challenge!</h1>
@@ -30,7 +32,7 @@
             by adding your intials and clicking the SUBMIT button</li>
           </ul>
         </p>
-
+        <ul id="choicesUl"></ul>
         <button id="start">START QUIZ</button>
       </div>
     </div>
