made the questions array working in index file, added a js file for highscores and a readme file

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Code Quiz</title>
     <meta charset="UTF-8" />
     <meta name="viewport" , content="width= device-width, initial-scale =1" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="style.css" rel="stylesheet" />
+
+    <link href="assets/style.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -32,10 +32,10 @@
             by adding your intials and clicking the SUBMIT button</li>
           </ul>
         </p>
-        <ul id="choicesUl"></ul>
+        
+       
         <button id="start">START QUIZ</button>
-      </div>
-    </div>
+   
     <script src="quizscript.js"></script>
   </body>
 </html>
