--- a/highscores.html
+++ b/highscores.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- This is the style links -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <!-- This is the title-->
     <title>Highscores Document</title>
   </head>
@@ -16,8 +16,8 @@
       <!-- Div for timer -->
       <div id="timer-clock"></div>
       <!-- Div for quiz content -->
-      <div id="quesContainer">
-        <h1>Highscores</h1>
+      <div id="ques Container">
+        </h1>
         <ul id="highScore"></ul>
         <!-- Buttons -->
         <button id="goBack">Go Back</button>
